src/main/java/com/example/kataAPI/errors/Error_Response.java
package com.example.kataAPI.errors;

import java.util.Scanner;

public class Error_Response {
    public static void main(String[] args) {
        Scanner leer = new Scanner(System.in);

    }
}
